Collapsable menu problems solved

--- a/module3-solution/styles.css
+++ b/module3-solution/styles.css
@@ -12,7 +12,6 @@ body {
   background-color: coral;
   border: 0;
   border-radius: 0;
-  height: 100px;
 }
 
 .navbar-brand {
@@ -36,41 +35,16 @@ body {
   background-color: rgb(201, 201, 201);
 }
 
-
-
 #collapsable-nav {
   text-align: center;
   font-size: 1.2em;
-  border: 2px solid rgb(99, 99, 99);
-  border-right: 0px;
-  border-left: 0px;
 }
 
-
-
-#collapsable-nav li:nth-child(1) {
-  margin-top: -10px
-}
-
-#collapsable-nav li:nth-child(2) {
-  margin-top: -20px 
-}
-
-#collapsable-nav li:nth-child(3) {
-  margin-top: -20px;
-  margin-bottom: 10px;
-}
-
-#nav-list hr {
-  border: 0.3px solid rgb(99, 99, 99);
-}
 
 /* END HEADER */
-
 
 /* BODY */
 
 div.menu-item {
   height: 1000px;
 }
-
